--- a/indium new website/opportunities.css
+++ b/indium new website/opportunities.css
@@ -4,24 +4,19 @@ body {
 }
 
 header {
-    position: sticky;
-    top: 0;
-    
+    position: relative;
 }
 
 .primary-navigation {
     display: flex;
-    
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
     background: #004d40;
     color: #fff;
-    
 }
 
 .nav-links {
-    
     list-style: none;
     display: flex;
     gap: 20px;
@@ -67,6 +62,32 @@ header {
     border-radius: 2px;
 }
 
+@media (max-width: 768px) {
+    .hamburger {
+        display: flex;
+    }
+
+    .nav-links {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        flex-direction: column;
+        gap: 10px;
+        background: #004d40;
+        width: 70%;
+        height: 100%;
+        padding: 20px;
+        transition: right 0.3s ease-in-out;
+    }
+
+    .nav-links.show {
+        right: 0;
+    }
+
+    .nav-links li {
+        text-align: center;
+    }
+}
 /* Dropdown Menu */
 .has-dropdown {
     position: relative;
@@ -109,55 +130,19 @@ header {
 .has-dropdown:hover .sub-menu-1 {
     display: block;
 }
+
+/* Banner */
 .banner {
-    /* background: url('main photo lab.jpg') no-repeat center center/cover; */
+    background: url('lab-banner.jpg') no-repeat center center/cover;
     height: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    
 }
 
 .banner-text h1 {
     font-size: 3em;
     color: #004d40;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-}
-
-
-footer {
-    background-color: #004d40;
-    color: white;
-    text-align: center;
-    padding: 1em 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-@media (max-width: 768px) {
-    .hamburger {
-        display: flex;
-    }
-
-    .nav-links {
-        position: fixed;
-        top: 0;
-        right: -100%;
-        flex-direction: column;
-        gap: 10px;
-        background: #004d40;
-        width: 70%;
-        height: 100%;
-        padding: 20px;
-        transition: right 0.3s ease-in-out;
-    }
-
-    .nav-links.show {
-        right: 0;
-    }
-
-    .nav-links li {
-        text-align: center;
-    }
 }
